# kerrKitaev

./: CMakeLists.txt  consts.hpp  main.cpp  plotGMat.py  solver.cpp  solver.hpp
