cmake_minimum_required(VERSION 3.17)
project(kerrKitaev)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
set(BOOST_ROOT /usr/local/install/boost)
set(CMAKE_CXX_FLAGS "-ljsoncpp")
set(CMAKE_CXX_FLAGS "-I/usr/include/python3.8")
set(CMAKE_CXX_FLAGS "-lpython3.8")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
#set(CMAKE_CXX_FLAGS_RELEASE "-O1")
find_package(Boost 1.45.0)
find_package (Threads)
include_directories("/usr/include/eigen3")
find_package(PythonLibs REQUIRED)

include_directories(${PYTHON_INCLUDE_DIRS})
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(kerrKitaev main.cpp consts.hpp solver.hpp solver.cpp)
    target_link_libraries(kerrKitaev ${Boost_LIBRARIES})
    target_link_libraries(kerrKitaev Threads::Threads)
    target_link_libraries(kerrKitaev ${PYTHON_LIBRARIES})
endif()
